<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:orientation="horizontal"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="1dp"
    android:background="@color/white"
    >



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/white"
        android:layout_gravity="center_vertical"
        >



        <TableRow
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:id="@+id/mensFashionG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_men"
                    android:padding="5dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mens_fashion"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/womenFashionG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_women"
                    android:padding="5dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/womens_fashion"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobTabG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_mobile"
                    android:padding="5dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mob_tab"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/compTechG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_laptop"
                    android:padding="5dp"
                    />

                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/computer_tech"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:id="@+id/apps.webbisswift.dealsbazaar.Utils.customview.CTextView" />

            </LinearLayout>

        </TableRow>
        <TableRow
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:id="@+id/tvEntG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_tv"
                    android:padding="10dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ent"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/camG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_camera"
                    android:padding="10dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_acc"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeKitchenG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/grid_fridge"
                    android:padding="10dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_kit"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/kidsG"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/category_round"
                    android:src="@drawable/ic_cart_white"
                    android:padding="10dp"
                    />
                <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_categories"
                    android:textAppearance="@style/DepGridTextStyle"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    />

            </LinearLayout>

        </TableRow>

    </TableLayout>


    </android.support.v7.widget.CardView>