<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="1dp"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/listing_header_box"
        >


        <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
            android:id="@+id/listingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deals_and_specials"
            app:font="@string/font_quicksand"
            app:fstyle="@integer/font_medium"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_dark_gray"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/moreBtn"
            android:maxLines="2"
            android:layout_alignParentTop="true"
            />


        <TextView
            android:id="@+id/moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/view_more"
            android:theme="@style/TagButtonStyle"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:paddingLeft="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/listingTitle"
            android:background="@drawable/round_btn_tag"
            />




    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_list"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:overScrollMode="never"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/listingTitle"
        android:gravity="right"
        android:paddingRight="10dp"
        android:background="@drawable/listing_footer_box"
        >

        <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="by"
            app:font="@string/font_quicksand"
            app:fstyle="@integer/font_medium"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"

            />
        <ImageView
            android:id="@+id/listingLogo"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:maxWidth="70dp"
            android:maxHeight="40dp"
            android:minWidth="70dp"
            android:minHeight="40dp"
            android:layout_marginLeft="5dp"
            />

    </LinearLayout>




</LinearLayout>
    </android.support.v7.widget.CardView>