<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.screens.home.HomeActivity"
    android:id="@+id/content_home"
    >


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@drawable/gradient_theme_color"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fitsSystemWindows="true"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
             >

            <apps.webbisswift.dealsbazaar.Utils.customview.CTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_title"
                app:font="@string/font_poppins"
                app:fstyle="2"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/light_gray"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/CTextView"
                android:drawableLeft="@drawable/app_icon_white_small"
                android:drawableStart="@drawable/app_icon_white_small"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"

                />

            </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box_bg"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:elevation="3dp"
            >
            <apps.webbisswift.dealsbazaar.Utils.customview.CAutoCompleteView
                android:id="@+id/topSearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:textColorHint="@color/secondary_text"
                android:textColor="@color/primary_text"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions|text"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:font="@string/font_poppins"
                app:fstyle="@integer/font_regular"
                android:popupBackground="@color/white"
                android:dropDownSelector="?attr/selectableItemBackgroundBorderless"
                />


            <ImageView
                android:id="@+id/searchBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >



        <android.support.v7.widget.RecyclerView
        android:id="@+id/dealsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="3dp"
        android:overScrollMode="never"
        />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/dealsProgress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:indicatorName="BallSpinFadeLoaderIndicator"
            app:indicatorColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            />

    </FrameLayout>



</android.support.design.widget.CoordinatorLayout>
